# llm-zoomcamp-2026

./: .gitignore  README.md  pyproject.toml  requirements.txt
module-01-introduction/: chunking.py  rag.py  utils.py
module-01-introduction/notebooks/: homework.executed.ipynb
module-01-introduction/outputs/: results.json
module-02-vector-search/: .gitignore  README.md  pyproject.toml
module-02-vector-search/Homework/: README.md  __init__.py  config.py  download.py  embedder.py  helper.py  homework.ipynb  homework.py  report_template.py  utils.py  visualizations.py
module-02-vector-search/Homework/outputs/: questions_1_to_3.json  results.json  summary.md
notebooks/: homework.ipynb
src/: agent.py  data_loader.py  indexing.py  main.py
tests/: test_pipeline.py
