[project]
name = "llm-zoomcamp-module-02"
version = "0.1.0"
description = "Official LLM Zoomcamp 2026 Module 02 homework project"
requires-python = ">=3.12"
dependencies = [
  "gitsource",
  "minsearch",
  "numpy",
  "onnxruntime",
  "tokenizers",
  "huggingface-hub",
  "tqdm",
  "jupyter",
  "matplotlib",
]

[tool.uv]
package = false
